--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ plotly>=5.15.0
 ta>=0.10.2
 matplotlib>=3.7.0
 seaborn>=0.12.0
+
+# Development dependencies
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.0.0
